--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.3",
     "@nestjs/typeorm": "8.0.3",
+    "@types/cors": "^2.8.13",
     "@types/passport-jwt": "^3.0.7",
     "bcrypt": "^5.1.0",
     "cache-manager": "^5.1.4",
+    "cors": "^2.8.5",
     "ioredis": "^5.2.4",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
